--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -106,3 +106,12 @@ img.medium {
   color: #f0c040;
   margin: 0.1rem;
 }
+
+/*Rating*/
+.rating span {
+  color: #f0c040;
+  margin: 0.1rem;
+}
+.rating span:last-child {
+  color: #404040;
+}
