--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -127,6 +127,9 @@ a.brand {
 .col-2 {
   flex: 2 1 50rem;
 }
+.min-30 {
+  min-width: 30rem;
+}
 /*Image*/
 img {
   border-radius: 0.5rem;
@@ -136,6 +139,10 @@ img.medium {
   width: 100%;
 }
 img.large {
+  width: 100%;
+}
+img.small {
+  max-width: 5rem;
   width: 100%;
 }
 
